fixes #276: Less bad rendering on Mobile
This improves the rendering of the website on mobile. It does so mainly by replacing the implementation of 'jumbotrons' with a CSS-grid based thing.

The resulting pages are far from perfect on mobile (the last few elements of the menu now disappear, and the sidebar is weirdly aligned to the right).

I could not detect notable differences on non-mobile.

--- a/src/main/webapp/styles/global.css
+++ b/src/main/webapp/styles/global.css
@@ -340,7 +340,6 @@ hr {
     }
 #ignite_body_leftcol {
     max-width: 870px;
-    float: left;
     }
 #ignite_body_sidebar {
     width: 225px;
